--- a/I/modelo1/modelo1.ipynb
+++ b/I/modelo1/modelo1.ipynb
@@ -157,12 +157,12 @@
       "status:  1\n",
       "valor do objetivo: 0.0\n",
       "variáveis:\n",
-      "    D1 = 37.384615\n",
-      "    D2 = 37.384615\n",
-      "    D3 = 37.384615\n",
-      "    d1menos = 37.384615\n",
-      "    d2mais = 37.384615\n",
-      "    d2menos = 37.384615\n",
+      "    D1 = 6.0\n",
+      "    D2 = 2.3846154\n",
+      "    D3 = 6.3076923\n",
+      "    d1menos = 0.0\n",
+      "    d2mais = 0.0\n",
+      "    d2menos = 0.0\n",
       "    d3mais = 37.384615\n",
       "Shadow prices\n",
       "    maximo_de_D1 : 0.0\n",
@@ -179,7 +179,7 @@
     "print(\"valor do objetivo:\",value(modelo.objective))\n",
     "print(\"variáveis:\")\n",
     "for i in modelo.variables():\n",
-    "    print(\"   \", i.name, \"=\", v.varValue)\n",
+    "    print(\"   \", i.name, \"=\", i.varValue)\n",
     "print(\"Shadow prices\")\n",
     "for a, b in modelo.constraints.items():\n",
     "    print(\"   \", a, \":\", b.pi)"
