modelos feitos sem analise

--- a/I/modelo2/modelo2.ipynb
+++ b/I/modelo2/modelo2.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68c660bc-796e-42c5-a0e0-08e5e3776cf7",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=g(\\d2-; 4), \\p2+=g(\\d2+; 10), \\p3+=5)\\\\\n",
-    "&\\text{sujeito a }\\\\\n",
-    "&&D_1 \\leq 6 \\\\\n",
-    "&&D_2 \\geq 2 \\\\\n",
-    "&&D_3 \\geq 1 \\\\\n",
-    "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
-    "&&5D_1+2D_2+4D_3+\\d2--\\d2+=60\\\\\n",
-    "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
-    "&&\\d{i}{\\pm} \\geq 0 \\\\\n",
-    "&&\\d2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}, g(d; p) = p\\floor{\\frac{d}{5}}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
    "metadata": {},
    "source": [
-    "agora linear\n",
     "$$\n",
     "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
     "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
@@ -38,13 +12,13 @@
     "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
     "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
     "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1-=5, \\p2-=4, \\p2+=10, \\p3+=5)\\\\\n",
+    "&\\text{minimizar }&f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5, t_1 = 125, t2 = 12, t_3 = 55)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
     "&&D_2 \\geq 2 \\\\\n",
     "&&D_3 \\geq 1 \\\\\n",
     "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
-    "&&\\frac{5}{5}D_1+\\frac{2}{5}D_2+\\frac{4}{5}D_3+\\dl2--\\dl2+=\\frac{60}{5}\\\\\n",
+    "&&D_1+\\frac{2}{5}D_2+\\frac{4}{5}D_3+\\dl2--\\dl2+=12\\\\\n",
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
     "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
@@ -70,9 +44,9 @@
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}) &= \\sum \\left( p_i^\\pm d_i^+ + p_i^-d_i^-\\right) \\\\\n",
+    "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}, \\mathbf{t}) &= \\sum \\frac{p_i^+ d_i^+ + p_i^- d_i^-}{t_i} \\\\\n",
     "f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5)\n",
-    "&= 5\\d1- + 4\\dl2- + 10\\dl2+ + 5\\d3+ \n",
+    "&= \\frac{5\\d1-}{125} + \\frac{4\\dl2- + 10\\dl2+}{12} + \\frac{5\\d3+}{55}\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -102,7 +76,7 @@
       "text/plain": [
        "modelo1:\n",
        "MINIMIZE\n",
-       "5*d1menos + 10*d2mais + 4*d2menos + 5*d3mais + 0\n",
+       "0.04*d1menos + 0.8333333333333334*d2mais + 0.3333333333333333*d2menos + 0.09090909090909091*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -140,7 +114,7 @@
     "modelo += (12*D[1] + 9*D[2] + 5*D[3]+d[1, \"-\"] >= 125, \"meta de alcance de lucro\")\n",
     "modelo += (D[1] + (2/5) * D[2] + (4/5) * D[3] + d[2,\"-\"] - d[2,\"+\"] == (60/5), \"meta de manter o nivel de mao de obra\")\n",
     "modelo += (5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"] <= 55, \"meta de travar o investimento\")\n",
-    "modelo += 5*d[1, \"-\"] + 4*d[2, \"-\"] + 10*d[2, \"+\"] + 5*d[3, \"+\"] #objectivo\n",
+    "modelo += (5*d[1, \"-\"])/125 + (4*d[2, \"-\"] + 10*d[2, \"+\"])/12 + (5*d[3, \"+\"])/55 #objectivo\n",
     "modelo"
    ]
   },
@@ -155,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 63.346154999999996\n",
+      "valor do objetivo: 1.9335664545454545\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 5.2692308\n",
