quarto modelo prob errado

--- a/I/modelo1/modelo1.ipynb
+++ b/I/modelo1/modelo1.ipynb
@@ -53,6 +53,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fa0cd1f-e986-4a0c-be52-e61f6d2a2965",
+   "metadata": {},
+   "source": [
+    "Nota: todos estes modelos, de acordo com o enunciado, parecem ser não preemptivas (metas pesadas), portanto métodos preemptivos (Metas Lexicográficas) e métodos utilitários (?) não parecem adequados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
