--- a/I/modelo3/modelo3.ipynb
+++ b/I/modelo3/modelo3.ipynb
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "modelo = LpProblem(\"modelo1\", LpMinimize)\n",
+    "modelo = LpProblem(\"modelo3\", LpMinimize)\n",
     "for i in range(1,4):\n",
     "    if (i, \"+\") in p: modelo += (p[i, \"+\"] * d[i, \"+\"])/t[i] <= Q\n",
     "    if (i, \"-\") in p: modelo += (p[i, \"-\"] * d[i, \"-\"])/t[i] <= Q\n",
@@ -189,7 +189,8 @@
     "print(\"status: \",modelo.solve())\n",
     "print(\"valor do objetivo:\",value(modelo.objective))\n",
     "print(\"variáveis:\")\n",
-    "for i in modelo.variables():\n"
+    "for i in modelo.variables():\n",
+    "    print(\"   \", i.name, \"=\", i.varValue)"
    ]
   }
  ],
