--- a/I/modelo4/modelo4.ipynb
+++ b/I/modelo4/modelo4.ipynb
@@ -27,6 +27,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86d54c66-bf8f-4684-a51d-d071e61e9a64",
+   "metadata": {},
+   "source": [
+    "fica (Handbook of Critical Issues in Goal Programming, pag37 - pag39)\n",
+    "$$\n",
+    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
+    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
+    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
+    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
+    "\\newcommand{\\dll}[2]{d_{#1}^{#2''}}\n",
+    "\\begin{alignat}{3}\n",
+    "&\\text{minimizar }&5\\dl1- +4\\dll2- + 10\\dll2+ 5\\dl3+  \\\\\n",
+    "&\\text{sujeito a }\\\\\n",
+    "&&D_1 \\leq 6 \\\\\n",
+    "&&D_2 \\geq 2 \\\\\n",
+    "&&D_3 \\geq 1 \\\\\n",
+    "&&9.6D_1+7.2D_2+4D_3+\\dl1-\\geq100\\\\\n",
+    "&&8.(3)D_1+3.(3)D_2+6.(6)D_3+\\dll2--\\dll2+=100\\\\\n",
+    "&&9.(09)D_1+9.(09)D_2+14.(54)D_3-\\dl3+ \\leq 100\\\\\n",
+    "&&\\d{i}{\\pm} \\geq 0\\\\\n",
+    "&&\\dl2\\pm \\in \\mathbb{N_0} \\\\\n",
+    "&&\n",
+    "\\end{alignat} \\\\\n",
+    "\\text{,sendo } \\dll{i}{\\pm} = \\frac{100 \\cdot \\dl{i}{\\pm}}{t_i}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
@@ -35,20 +65,6 @@
    "source": [
     "from pulp import *\n",
     "from math import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{align}\n",
-    "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}, \\mathbf{t}) &= \\sum \\frac{p_i^+ d_i^+ + p_i^- d_i^-}{t_i} \\\\\n",
-    "f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5)\n",
-    "&= \\frac{5\\d1-}{125} + \\frac{4\\dl2- + 10\\dl2+}{12} + \\frac{5\\d3+}{55}\n",
-    "\\end{align}\n",
-    "$$"
    ]
   },
   {
@@ -62,7 +78,21 @@
     "    (i,pm):LpVariable(f\"d{i}{'mais' if pm == '+' else 'menos'}\", lowBound=0, cat = 'Integer' if i == 2 else 'Continuous') \n",
     "        for i in range(1,4) for pm in [\"+\", \"-\"]\n",
     "}\n",
-    "D = {i: LpVariable(f\"D{i}\", lowBound=0) for i in range(1, 4)}"
+    "D = {i: LpVariable(f\"D{i}\", lowBound=0) for i in range(1, 4)}\n",
+    "p = {\n",
+    "    (1, \"-\"): 5,\n",
+    "    (2, \"-\"): 4,\n",
+    "    (2, \"+\"): 10,\n",
+    "    (3, \"+\"): 5\n",
+    "}\n",
+    "t = {\n",
+    "    1:125,\n",
+    "    2:12,\n",
+    "    3:55\n",
+    "}\n",
+    "\n",
+    "def unline(dlinha, t):\n",
+    "    return (dlinha*t)/100"
    ]
   },
   {
@@ -74,9 +104,9 @@
     {
      "data": {
       "text/plain": [
-       "modelo1:\n",
+       "modelo4:\n",
        "MINIMIZE\n",
-       "0.04*d1menos + 0.8333333333333334*d2mais + 0.3333333333333333*d2menos + 0.09090909090909091*d3mais + 0.0\n",
+       "5*d1menos + 10*d2mais + 4*d2menos + 5*d3mais + 0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -84,12 +114,13 @@
        "\n",
        "minimo_de_D3: D3 >= 1\n",
        "\n",
-       "meta_de_alcance_de_lucro: 12 D1 + 9 D2 + 5 D3 + d1menos >= 125\n",
+       "meta_de_alcance_de_lucro: 9.6 D1 + 7.2 D2 + 4 D3 + d1menos >= 100\n",
        "\n",
-       "meta_de_manter_o_nivel_de_mao_de_obra: D1 + 0.4 D2 + 0.8 D3 - d2mais + d2menos\n",
-       " = 12\n",
+       "meta_de_manter_o_nivel_de_mao_de_obra: 8.33333333333 D1 + 3.33333333333 D2\n",
+       " + 6.66666666667 D3 - d2mais + d2menos = 100\n",
        "\n",
-       "meta_de_travar_o_investimento: 5 D1 + 5 D2 + 8 D3 - d3mais <= 55\n",
+       "meta_de_travar_o_investimento: 0.0909090909091 D1 + 0.0909090909091 D2\n",
+       " + 14.5454545455 D3 - d3mais <= 100\n",
        "\n",
        "VARIABLES\n",
        "D1 Continuous\n",
@@ -107,14 +138,14 @@
     }
    ],
    "source": [
-    "modelo = LpProblem(\"modelo2\", LpMinimize)\n",
+    "modelo = LpProblem(\"modelo4\", LpMinimize)\n",
     "modelo += (D[1] <= 6, \"maximo de D1\")\n",
     "modelo += (D[2] >= 2, \"minimo de D2\")\n",
     "modelo += (D[3] >= 1, \"minimo de D3\")\n",
-    "modelo += (12*D[1] + 9*D[2] + 5*D[3]+d[1, \"-\"] >= 125, \"meta de alcance de lucro\")\n",
-    "modelo += (D[1] + (2/5) * D[2] + (4/5) * D[3] + d[2,\"-\"] - d[2,\"+\"] == (60/5), \"meta de manter o nivel de mao de obra\")\n",
-    "modelo += (5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"] <= 55, \"meta de travar o investimento\")\n",
-    "modelo += (5*d[1, \"-\"])/125 + (4*d[2, \"-\"] + 10*d[2, \"+\"])/12 + (5*d[3, \"+\"])/55 #objectivo\n",
+    "modelo += (9.6*D[1] + 7.2*D[2] + 4*D[3]+d[1, \"-\"] >= 100, \"meta de alcance de lucro\")\n",
+    "modelo += ((8 + 1/3)*D[1] + (3 + 1/3) * D[2] + (6 + 2/3) * D[3] + d[2,\"-\"] - d[2,\"+\"] == 100, \"meta de manter o nivel de mao de obra\")\n",
+    "modelo += ((1/11)*D[1] + (1/11)*D[2] + (14 + 6/11)*D[3] - d[3, \"+\"] <= 100, \"meta de travar o investimento\")\n",
+    "modelo += 5*d[1, \"-\"] + 4*d[2, \"-\"] + 10*d[2, \"+\"] + 5*d[3, \"+\"]\n",
     "modelo"
    ]
   },
@@ -129,15 +160,15 @@
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 1.9335664545454545\n",
+      "valor do objetivo: 0.0\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
-      "    D2 = 5.2692308\n",
-      "    D3 = 1.1153846\n",
+      "    D2 = 13.0\n",
+      "    D3 = 1.0\n",
       "    d1menos = 0.0\n",
       "    d2mais = 0.0\n",
-      "    d2menos = 3.0\n",
-      "    d3mais = 10.269231\n"
+      "    d2menos = 0.0\n",
+      "    d3mais = 0.0\n"
      ]
     }
    ],
