--- a/I/modelo1/modelo1.ipynb
+++ b/I/modelo1/modelo1.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68c660bc-796e-42c5-a0e0-08e5e3776cf7",
+   "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
    "metadata": {},
    "source": [
     "$$\n",
     "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
     "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=g(\\d2-; 4), \\p2+=g(\\d2+; 10), \\p3+=5)\\\\\n",
+    "\\begin{alignat*}{3}\n",
+    "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
     "&&D_2 \\geq 2 \\\\\n",
@@ -19,45 +17,10 @@
     "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
     "&&5D_1+2D_2+4D_3+\\d2--\\d2+=60\\\\\n",
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
-    "&&\\d{i}{\\pm} \\geq 0 \\\\\n",
-    "&&\\d2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}, g(d; p) = p\\floor{\\frac{d}{5}}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
-   "metadata": {},
-   "source": [
-    "agora linear\n",
-    "$$\n",
-    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
-    "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1-=5, \\p2-=4, \\p2+=10, \\p3+=5)\\\\\n",
-    "&\\text{sujeito a }\\\\\n",
-    "&&D_1 \\leq 6 \\\\\n",
-    "&&D_2 \\geq 2 \\\\\n",
-    "&&D_3 \\geq 1 \\\\\n",
-    "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
-    "&&\\frac{5}{5}D_1+\\frac{2}{5}D_2+\\frac{4}{5}D_3+\\dl2--\\dl2+=\\frac{60}{5}\\\\\n",
-    "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
-    "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}\n",
+    "&&\\d2\\pm \\in \\mathbb{N_0}\n",
+    "\\end{alignat*}\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fa0cd1f-e986-4a0c-be52-e61f6d2a2965",
-   "metadata": {},
-   "source": [
-    "Nota: todos estes modelos, de acordo com o enunciado, parecem ser não preemptivas (metas pesadas), portanto métodos preemptivos (Metas Lexicográficas) e métodos utilitários (?) não parecem adequados."
    ]
   },
   {
@@ -79,8 +42,8 @@
     "$$\n",
     "\\begin{align}\n",
     "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}) &= \\sum \\left( p_i^\\pm d_i^+ + p_i^-d_i^-\\right) \\\\\n",
-    "f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5)\n",
-    "&= 5\\d1- + 4\\dl2- + 10\\dl2+ + 5\\d3+ \n",
+    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=\\frac45, \\p2+=2, \\p3+=5)\n",
+    "&= 5\\d1- + \\frac45\\d2- + 2\\d2+ + 5\\d3+\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -110,7 +73,7 @@
       "text/plain": [
        "modelo1:\n",
        "MINIMIZE\n",
-       "5*d1menos + 10*d2mais + 4*d2menos + 5*d3mais + 0\n",
+       "5*d1menos + 2*d2mais + 0.8*d2menos + 5*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -120,8 +83,8 @@
        "\n",
        "meta_de_alcance_de_lucro: 12 D1 + 9 D2 + 5 D3 + d1menos >= 125\n",
        "\n",
-       "meta_de_manter_o_nivel_de_mao_de_obra: D1 + 0.4 D2 + 0.8 D3 - d2mais + d2menos\n",
-       " = 12\n",
+       "meta_de_manter_o_nivel_de_mao_de_obra: 5 D1 + 2 D2 + 4 D3 - d2mais + d2menos\n",
+       " = 60\n",
        "\n",
        "meta_de_travar_o_investimento: 5 D1 + 5 D2 + 8 D3 - d3mais <= 55\n",
        "\n",
@@ -142,13 +105,15 @@
    ],
    "source": [
     "modelo = LpProblem(\"modelo1\", LpMinimize)\n",
-    "modelo += (D[1] <= 6, \"maximo de D1\")\n",
-    "modelo += (D[2] >= 2, \"minimo de D2\")\n",
-    "modelo += (D[3] >= 1, \"minimo de D3\")\n",
-    "modelo += (12*D[1] + 9*D[2] + 5*D[3]+d[1, \"-\"] >= 125, \"meta de alcance de lucro\")\n",
-    "modelo += (D[1] + (2/5) * D[2] + (4/5) * D[3] + d[2,\"-\"] - d[2,\"+\"] == (60/5), \"meta de manter o nivel de mao de obra\")\n",
-    "modelo += (5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"] <= 55, \"meta de travar o investimento\")\n",
-    "modelo += 5*d[1, \"-\"] + 4*d[2, \"-\"] + 10*d[2, \"+\"] + 5*d[3, \"+\"] #objectivo\n",
+    "modelo += D[1] <= 6, \"maximo de D1\"\n",
+    "modelo += D[2] >= 2, \"minimo de D2\"\n",
+    "modelo += D[3] >= 1, \"minimo de D3\"\n",
+    "\n",
+    "modelo += 12*D[1] + 9*D[2] + 5*D[3] + d[1, \"-\"]            >= 125,    \"meta de alcance de lucro\"\n",
+    "modelo +=  5*D[1] + 2*D[2] + 4*D[3] + d[2, \"-\"] - d[2,\"+\"] == 60 ,    \"meta de manter o nivel de mao de obra\"\n",
+    "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
+    "\n",
+    "modelo += 5*d[1, \"-\"] + (4/5)*d[2, \"-\"] + 2*d[2, \"+\"] + 5*d[3, \"+\"] #objectivo\n",
     "modelo"
    ]
   },
@@ -170,7 +135,7 @@
       "    D3 = 1.1153846\n",
       "    d1menos = 0.0\n",
       "    d2mais = 0.0\n",
-      "    d2menos = 3.0\n",
+      "    d2menos = 15.0\n",
       "    d3mais = 10.269231\n"
      ]
     }
