--- a/I/modelo2/modelo2.ipynb
+++ b/I/modelo2/modelo2.ipynb
@@ -8,21 +8,18 @@
     "$$\n",
     "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
     "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
-    "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5, t_1 = 125, t2 = 12, t_3 = 55)\\\\\n",
+    "\\begin{alignat*}{3}\n",
+    "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+, t_1, t_2, t_3)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
     "&&D_2 \\geq 2 \\\\\n",
     "&&D_3 \\geq 1 \\\\\n",
     "&&12D_1+9D_2+5D_3+\\d1-\\geq125\\\\\n",
-    "&&D_1+\\frac{2}{5}D_2+\\frac{4}{5}D_3+\\dl2--\\dl2+=12\\\\\n",
+    "&&5D_1+2D_2+4D_3+\\d2--\\d2+=60\\\\\n",
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
-    "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}\n",
+    "&&\\d2\\pm \\in \\mathbb{N_0}\n",
+    "\\end{alignat*}\n",
     "$$"
    ]
   },
@@ -45,8 +42,8 @@
     "$$\n",
     "\\begin{align}\n",
     "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}, \\mathbf{t}) &= \\sum \\frac{p_i^+ d_i^+ + p_i^- d_i^-}{t_i} \\\\\n",
-    "f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1+=5, \\p2-=4, \\p2+=10, \\p3-=5)\n",
-    "&= \\frac{5\\d1-}{125} + \\frac{4\\dl2- + 10\\dl2+}{12} + \\frac{5\\d3+}{55}\n",
+    "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=\\frac45, \\p2+=2, \\p3+=5, t_1 = 125, t_2 = 60, t_3 = 55)\n",
+    "&= \\frac5{125}\\d1- + \\frac4{5\\cdot60}\\d2-+\\frac2{60}\\d2++\\frac5{55}\\d3+\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -74,9 +71,9 @@
     {
      "data": {
       "text/plain": [
-       "modelo1:\n",
+       "modelo2:\n",
        "MINIMIZE\n",
-       "0.04*d1menos + 0.8333333333333334*d2mais + 0.3333333333333333*d2menos + 0.09090909090909091*d3mais + 0.0\n",
+       "4.0*d1menos + 3.3333333333333335*d2mais + 1.3333333333333335*d2menos + 9.090909090909092*d3mais + 0.0\n",
        "SUBJECT TO\n",
        "maximo_de_D1: D1 <= 6\n",
        "\n",
@@ -86,8 +83,8 @@
        "\n",
        "meta_de_alcance_de_lucro: 12 D1 + 9 D2 + 5 D3 + d1menos >= 125\n",
        "\n",
-       "meta_de_manter_o_nivel_de_mao_de_obra: D1 + 0.4 D2 + 0.8 D3 - d2mais + d2menos\n",
-       " = 12\n",
+       "meta_de_manter_o_nivel_de_mao_de_obra: 5 D1 + 2 D2 + 4 D3 - d2mais + d2menos\n",
+       " = 60\n",
        "\n",
        "meta_de_travar_o_investimento: 5 D1 + 5 D2 + 8 D3 - d3mais <= 55\n",
        "\n",
@@ -108,13 +105,18 @@
    ],
    "source": [
     "modelo = LpProblem(\"modelo2\", LpMinimize)\n",
-    "modelo += (D[1] <= 6, \"maximo de D1\")\n",
-    "modelo += (D[2] >= 2, \"minimo de D2\")\n",
-    "modelo += (D[3] >= 1, \"minimo de D3\")\n",
-    "modelo += (12*D[1] + 9*D[2] + 5*D[3]+d[1, \"-\"] >= 125, \"meta de alcance de lucro\")\n",
-    "modelo += (D[1] + (2/5) * D[2] + (4/5) * D[3] + d[2,\"-\"] - d[2,\"+\"] == (60/5), \"meta de manter o nivel de mao de obra\")\n",
-    "modelo += (5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"] <= 55, \"meta de travar o investimento\")\n",
-    "modelo += (5*d[1, \"-\"])/125 + (4*d[2, \"-\"] + 10*d[2, \"+\"])/12 + (5*d[3, \"+\"])/55 #objectivo\n",
+    "modelo += D[1] <= 6, \"maximo de D1\"\n",
+    "modelo += D[2] >= 2, \"minimo de D2\"\n",
+    "modelo += D[3] >= 1, \"minimo de D3\"\n",
+    "\n",
+    "modelo += 12*D[1] + 9*D[2] + 5*D[3] + d[1, \"-\"]            >= 125,    \"meta de alcance de lucro\"\n",
+    "modelo +=  5*D[1] + 2*D[2] + 4*D[3] + d[2, \"-\"] - d[2,\"+\"] == 60 ,    \"meta de manter o nivel de mao de obra\"\n",
+    "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
+    "\n",
+    "modelo +=   100 * (5/125)   * d[1, \"-\"] + \\\n",
+    "            100 * (4/(5*60))* d[2, \"-\"] + \\\n",
+    "            100 * (2/60)    * d[2, \"+\"] + \\\n",
+    "            100 * (5/55)    * d[3, \"+\"]\n",
     "modelo"
    ]
   },
@@ -129,15 +131,15 @@
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 1.9335664545454545\n",
+      "valor do objetivo: 95.87878787878789\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
-      "    D2 = 5.2692308\n",
-      "    D3 = 1.1153846\n",
-      "    d1menos = 0.0\n",
+      "    D2 = 3.5\n",
+      "    D3 = 1.0\n",
+      "    d1menos = 16.5\n",
       "    d2mais = 0.0\n",
-      "    d2menos = 3.0\n",
-      "    d3mais = 10.269231\n"
+      "    d2menos = 19.0\n",
+      "    d3mais = 0.5\n"
      ]
     }
    ],
@@ -147,14 +149,6 @@
     "print(\"variáveis:\")\n",
     "for i in modelo.variables():\n",
     "    print(\"   \", i.name, \"=\", i.varValue)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6ce3834-8908-4deb-b6c2-075b09163c98",
-   "metadata": {},
-   "source": [
-    "Parece dar os mesmos valores de desvios porque a meta 1 já está na mesma unidade que a meta 3, e a meta 2 como é inteira, e a penalização é pequena ao de empregar mais pessoas, o modelo decidiu como importante mesmo quando usando os desvios percentuais. O lucro a longo prazo atinge sempre o pretendido, mas prevê-se que o investimento terá que ser maior. Isto faz sentido sendo que D1 contribui de forma drástica para o lucro comparado com o investimento necessário e a mão de obra que precisa (sendo que o modelo achou necessário usar sempre o máximo desse doce), ainda que este é o que precisa de mais mão de obra; tanto que o modelo recomenda empregar mais para este lucro se observar."
    ]
   }
  ],
