--- a/I/modelo3/modelo3.ipynb
+++ b/I/modelo3/modelo3.ipynb
@@ -12,7 +12,7 @@
     "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
     "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
     "\\begin{alignat}{3}\n",
-    "&\\text{minimizar }&f(\\d1-,\\dl2-,\\dl2+,\\d3+; \\p1-=5, \\p2-=4, \\p2+=10, \\p3+=5, t_1 = 125, t2 = 12, t_3 = 55)\\\\\n",
+    "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+, t_1, t_2, t_3)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
     "&&D_2 \\geq 2 \\\\\n",
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "modelo1:\n",
+       "modelo3:\n",
        "MINIMIZE\n",
        "1*Q + 0\n",
        "SUBJECT TO\n",
@@ -125,8 +125,8 @@
        "\n",
        "meta_de_alcance_de_lucro: 12 D1 + 9 D2 + 5 D3 + d1menos >= 125\n",
        "\n",
-       "meta_de_manter_o_nivel_de_mao_de_obra: D1 + 0.4 D2 + 0.8 D3 - d2mais + d2menos\n",
-       " = 12\n",
+       "meta_de_manter_o_nivel_de_mao_de_obra: 5 D1 + 2 D2 + 4 D3 - d2mais + d2menos\n",
+       " = 60\n",
        "\n",
        "meta_de_travar_o_investimento: 5 D1 + 5 D2 + 8 D3 - d3mais <= 55\n",
        "\n",
@@ -151,13 +151,16 @@
     "for i in range(1,4):\n",
     "    if (i, \"+\") in p: modelo += (p[i, \"+\"] * d[i, \"+\"])/t[i] <= Q\n",
     "    if (i, \"-\") in p: modelo += (p[i, \"-\"] * d[i, \"-\"])/t[i] <= Q\n",
-    "modelo += (D[1] <= 6, \"maximo de D1\")\n",
-    "modelo += (D[2] >= 2, \"minimo de D2\")\n",
-    "modelo += (D[3] >= 1, \"minimo de D3\")\n",
-    "modelo += (12*D[1] + 9*D[2] + 5*D[3]+d[1, \"-\"] >= 125, \"meta de alcance de lucro\")\n",
-    "modelo += (D[1] + (2/5) * D[2] + (4/5) * D[3] + d[2,\"-\"] - d[2,\"+\"] == (60/5), \"meta de manter o nivel de mao de obra\")\n",
-    "modelo += (5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"] <= 55, \"meta de travar o investimento\")\n",
-    "modelo += Q # objetivo\n",
+    "    \n",
+    "modelo += D[1] <= 6, \"maximo de D1\"\n",
+    "modelo += D[2] >= 2, \"minimo de D2\"\n",
+    "modelo += D[3] >= 1, \"minimo de D3\"\n",
+    "\n",
+    "modelo += 12*D[1] + 9*D[2] + 5*D[3] + d[1, \"-\"]            >= 125,    \"meta de alcance de lucro\"\n",
+    "modelo +=  5*D[1] + 2*D[2] + 4*D[3] + d[2, \"-\"] - d[2,\"+\"] == 60 ,    \"meta de manter o nivel de mao de obra\"\n",
+    "modelo +=  5*D[1] + 5*D[2] + 8*D[3] - d[3, \"+\"]            <= 55 ,    \"meta de travar o investimento\"\n",
+    "\n",
+    "modelo += Q\n",
     "modelo"
    ]
   },
@@ -172,16 +175,16 @@
      "output_type": "stream",
      "text": [
       "status:  1\n",
-      "valor do objetivo: 1.0\n",
+      "valor do objetivo: 2.2727273\n",
       "variáveis:\n",
       "    D1 = 6.0\n",
       "    D2 = 2.0\n",
-      "    D3 = 2.75\n",
-      "    Q = 1.0\n",
-      "    d1menos = 21.25\n",
+      "    D3 = 5.0\n",
+      "    Q = 2.2727273\n",
+      "    d1menos = 10.0\n",
       "    d2mais = 0.0\n",
-      "    d2menos = 3.0\n",
-      "    d3mais = 7.0\n"
+      "    d2menos = 6.0\n",
+      "    d3mais = 25.0\n"
      ]
     }
    ],
