feito grande parte da a)

--- a/I/modelo1/modelo1.ipynb
+++ b/I/modelo1/modelo1.ipynb
@@ -27,7 +27,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "from pulp import *\n",
@@ -35,16 +39,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "f(\\mathbf{d^{\\pm}};\\mathbf{p^{\\pm}}) &= \\sum \\left( p_i^\\pm d_i^+ + p_i^-d_i^-\\right) \\\\\n",
     "f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-=5, \\p2-=\\frac45, \\p2+=2, \\p3+=5)\n",
     "&= 5\\d1- + \\frac45\\d2- + 2\\d2+ + 5\\d3+\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -52,7 +57,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122c9256-674d-4d1c-8651-6dbf4750ca0f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "d = {\n",
@@ -66,7 +75,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff887a9-886b-4a65-a083-ed0fb0fd394d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -121,7 +134,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a241e12a-cfa8-4635-ba4e-269aea56a3fe",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
