--- a/I/preemp/preemp.ipynb
+++ b/I/preemp/preemp.ipynb
@@ -156,13 +156,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1248968-d49e-48d0-b7c2-d9a0d7e8c56c",
    "metadata": {},
    "source": [
     "$$\n",
-    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\renewcommand{\\d}[2]{d_{#1}^{#2}}\n",
+    "\\renewcommand{\\p}[2]{p_{#1}^{#2}}\n",
     "\\begin{alignat*}{3}\n",
     "&\\text{minimizar }&\\d1-\\\\\n",
     "&\\text{sujeito a }\\\\\n",
