--- a/I/modelo3/modelo3.ipynb
+++ b/I/modelo3/modelo3.ipynb
@@ -1,17 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "39c33d5d-8697-415b-b287-c3fcb409f568",
    "metadata": {},
    "source": [
     "$$\n",
-    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
-    "\\begin{alignat}{3}\n",
+    "\\renewcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\renewcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
+    "\\renewcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
+    "\\begin{alignat*}{3}\n",
     "&\\text{minimizar }&f(\\d1-,\\d2-,\\d2+,\\d3+; \\p1-, \\p2-, \\p2+, \\p3+, t_1, t_2, t_3)\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&D_1 \\leq 6 \\\\\n",
@@ -22,7 +21,7 @@
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
     "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}\n",
+    "\\end{alignat*}\n",
     "$$"
    ]
   },
@@ -30,7 +29,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2a4e582-0463-4357-8ae0-5830971181a4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "from pulp import *\n",
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d164efa6-b98d-4785-9cb6-38f5bd943bc1",
    "metadata": {},
@@ -49,12 +53,12 @@
     "fica\n",
     "\n",
     "$$\n",
-    "\\newcommand{\\d}[2]{d_{#1}^{#2}}\n",
-    "\\newcommand{\\p}[2]{p_{#1}^{#2}}\n",
-    "\\newcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
-    "\\newcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
-    "\\newcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
-    "\\begin{alignat}{3}\n",
+    "\\renewcommand{\\d}[2]{d_{#1}^{#2}}\n",
+    "\\renewcommand{\\p}[2]{p_{#1}^{#2}}\n",
+    "\\renewcommand{\\ceil}[1]{\\left \\lceil #1 \\right \\rceil }\n",
+    "\\renewcommand{\\floor}[1]{\\left \\lfloor #1 \\right \\rfloor }\n",
+    "\\renewcommand{\\dl}[2]{d_{#1}^{#2'}}\n",
+    "\\begin{alignat*}{3}\n",
     "&\\text{minimizar }&Q\\\\\n",
     "&\\text{sujeito a }\\\\\n",
     "&&p_i^\\pm\\frac{d^\\pm_i}{t_i} \\leq Q \\\\\n",
@@ -66,7 +70,7 @@
     "&&5D_1+5D_2+8D_3-\\d3+ \\leq 55\\\\\n",
     "&&\\d{i}{\\pm} \\geq 0\\\\\n",
     "&&\\dl2\\pm \\in \\mathbb{N_0}\n",
-    "\\end{alignat}\n",
+    "\\end{alignat*}\n",
     "$$"
    ]
   },
@@ -74,7 +78,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122c9256-674d-4d1c-8651-6dbf4750ca0f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "d = {\n",
@@ -100,7 +108,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff887a9-886b-4a65-a083-ed0fb0fd394d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -168,7 +180,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a241e12a-cfa8-4635-ba4e-269aea56a3fe",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
