--- a/I/relatorio/relatorio.tex
+++ b/I/relatorio/relatorio.tex
@@ -43,6 +43,8 @@
     \usepackage{booktabs}
     \usepackage{tabulary}
     \usepackage{blindtext}
+    \usepackage{icomma}
+
     % \usepackage{tocloft} 
 % }
 
